# animation-drawable-integration

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jamesfchen/animationdrawableintegration/: FirstFragment.kt  GlideModule.java  MainActivity.kt  SecondFragment.kt  TestActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
framesequence-integration/: CMakeLists.txt  build.gradle.kts
framesequence-integration/src/main/java/android/rastermill/: FrameSequenceDrawable.java
framesequence-integration/src/main/java/com/electrolye/framesequence/: ByteBufferFrameSequenceDecoder.kt  FrameSequenceExtension.kt  FrameSequenceModule.kt  StreamFrameSequenceDecoder.kt
framesequence-integration/src/main/jni/framesequence/: FrameSequence_gif.h
